# anibridge-mappings

./: README.md  main.py  mappings.edits.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
app/: package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
app/src/: index.tsx  main.tsx
app/src/components/: app.tsx  filters-bar.tsx  mapping-details.tsx  mappings-table.tsx  ui-types.ts  yaml-editor.tsx
app/src/utils/: edits-yaml.ts  mapping-presentation.ts  metadata-api.ts  provenance.ts  url-state.ts  validate-edits.ts
docs/schemas/: anilist.md  anime-aggregations.md  anime-lists.md  anime-offline-database.md  mal.md  qlever.md  shinkro.md  tmdb.md  tvdb.md
scripts/: build_edits_from_legacy.py  find_noop_edits.py
src/anibridge_mappings/core/: aggregator.py  edits.py  graph.py  inference.py  meta.py  provenance.py  range_specs.py  stats.py  validators.py
src/anibridge_mappings/sources/: anilist.py  anime_aggregations.py  anime_lists.py  anime_offline_database.py  base.py  hyakanime.py  mal.py  qlever.py  shinkro.py  tmdb.py  tvdb.py
src/anibridge_mappings/utils/: mapping.py  provider_ids.py
tests/: conftest.py
tests/core/: test_aggregator.py  test_edits.py  test_graph.py  test_inference.py  test_meta.py  test_provenance.py  test_range_specs.py  test_stats.py  test_validators.py
tests/sources/: test_anilist.py  test_anime_aggregations.py  test_anime_lists.py  test_anime_offline_database.py  test_base.py  test_hyakanime.py  test_mal.py  test_qlever.py  test_shinkro.py  test_tmdb.py  test_tvdb.py
tests/utils/: test_mapping.py  test_provider_ids.py
