[project]
name = "anibridge-mappings"
version = "3.0.1"
description = "Anime mappings for the AniBridge project."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
    { name = "LuceoEtzio" },
]

dependencies = [
    "aiohttp>=3.13.2",
    "anibridge-utils>=0.2.0",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.19.1",
    "zstandard>=0.25.0",
]

[project.urls]
Homepage = "https://anibridge.eliasbenb.dev"
Documentation = "https://anibridge.eliasbenb.dev"
Source = "https://github.com/anibridge/anibridge-mappings"
Issues = "https://github.com/anibridge/anibridge-mappings/issues"

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
filterwarnings = []

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.5",
    "ty>=0.0.22",
    "types-lxml>=2025.11.25",
]
